[gd_scene load_steps=9 format=3 uid="uid://124rp1mj0ued"]

[ext_resource type="Script" path="res://main.gd" id="1_5d0xc"]
[ext_resource type="PackedScene" uid="uid://cmw085wbs6130" path="res://player.tscn" id="2_gnskr"]
[ext_resource type="PackedScene" uid="uid://15uvohd5ikfa" path="res://mob.tscn" id="2_pgsrf"]
[ext_resource type="PackedScene" uid="uid://bomnm0yy52msj" path="res://hud.tscn" id="4_32njb"]
[ext_resource type="AudioStream" uid="uid://bounqmxeq50ie" path="res://art/In The Air.mp3" id="5_5u34r"]
[ext_resource type="AudioStream" uid="uid://b448byoye7ea2" path="res://art/gameover.wav" id="5_683rp"]
[ext_resource type="PackedScene" uid="uid://d31yavvesmwla" path="res://play_area.tscn" id="7_j8e16"]

[sub_resource type="Curve2D" id="Curve2D_fgtdf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 648, 560, 0, 0, 0, 0, 3086, -496, 0, 0, 0, 0, 2491, -2517, 0, 0, 0, 0, 2934, -2953, 0, 0, 0, 0, 5165, -2963, 0, 0, 0, 0, 2619, -3082, 0, 0, 0, 0, 2399, -1921, 0, 0, 0, 0, 1475, -1912, 0, 0, 0, 0, 1090, -2552, 0, 0, 0, 0, 1119, -1861, 0, 0, 0, 0, 1372, -1115, 0, 0, 0, 0, 707, -596, 0, 0, 0, 0, 648, 560)
}
point_count = 13

[node name="Main" type="Node"]
script = ExtResource("1_5d0xc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.145098, 0.168627, 1)

[node name="Player" parent="." instance=ExtResource("2_gnskr")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(6300, 500)

[node name="HUD" parent="." instance=ExtResource("4_32njb")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5u34r")
volume_db = -4.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_683rp")
volume_db = -2.0

[node name="PlayArea" parent="." instance=ExtResource("7_j8e16")]

[node name="Path2D" type="Path2D" parent="."]
z_index = 1
position = Vector2(899, 3737)
curve = SubResource("Curve2D_fgtdf")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(5075.19, -2962.6)
progress = 7526.44
rotates = false

[node name="Mob" parent="Path2D/PathFollow2D" instance=ExtResource("2_pgsrf")]
z_index = 2

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
